fix: blog menu spacing

--- a/src/app/blogs/blog-list/blog-list.component.css
+++ b/src/app/blogs/blog-list/blog-list.component.css
@@ -11,4 +11,8 @@
   li {
     margin:0;
   }
+
+  li + li {
+    margin-block-start: var(--size-3);
+  }
 }
